--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -6,14 +6,14 @@
     </div>
     <nav>
       <ul>
-        <li class="current">
-          <a href="home">Home</a>
+        <li [routerLinkActive]="['current']">
+          <a [routerLink]="['home']">Home</a>
         </li>
-        <li>
-          <a href="about">About</a>
+        <li [routerLinkActive]="['current']">
+          <a [routerLink]="['about']">About</a>
         </li>
-        <li>
-          <a href="services">Services</a>
+        <li [routerLinkActive]="['current']">
+          <a [routerLink]="['services']">Services</a>
         </li>
       </ul>
     </nav>
