--- a/acme.web/src/app/components/views/services/services.component.html
+++ b/acme.web/src/app/components/views/services/services.component.html
@@ -13,26 +13,7 @@
         </li>
       </ul>
     </article>
-    <aside id="sidebar">
-      <div class="dark">
-        <h3>Get a Quote</h3>
-        <form class="quote">
-          <div>
-            <label>Name</label>
-            <input type="text" placeholder="Name">
-          </div>
-          <div>
-            <label>Email</label>
-            <input type="email" placeholder="Email">
-          </div>
-          <div>
-            <label>Message</label>
-            <textarea type="text" placeholder="Message"></textarea>
-          </div>
-          <button type="submit" class="button">Send</button>
-        </form>
-      </div>
-    </aside>
+    <app-quote></app-quote>
   </div>
 </section>
 <app-footer></app-footer>
